Changed title & nav bar

--- a/views/_navigation.haml
+++ b/views/_navigation.haml
@@ -2,7 +2,7 @@
   .navbar-inner
     .container
       .brand{:href => "/"}
-        Hacktivity
+        Hacktivities
       %ul.nav
         %li
           %a{:href => "/hackathons"} Hackathons
