--- a/views/layouts/application.haml
+++ b/views/layouts/application.haml
@@ -3,7 +3,7 @@
   %head
     %meta{:'http-equiv' => "Content-Type", :content => "text/html; charset=utf-8"}
     %meta{:name => "lang", :content => "en"}
-    %title Hacktivity
+    %title Hacktivities - Track a Hack
     %link{:href=>'//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css', :media => "screen", :rel => 'stylesheet', :type => "text/css"}
     %link{:href=>'//netdna.bootstrapcdn.com/font-awesome/3.0/css/font-awesome.css', :media => "screen", :rel => 'stylesheet', :type => "text/css"}
     %link{:href=>'/application.css', :media => "screen", :rel => 'stylesheet', :type => "text/css"}
