--- a/views/layouts/application.haml
+++ b/views/layouts/application.haml
@@ -11,7 +11,7 @@
     %script{:type => "text/javascript", :src => "http://code.jquery.com/jquery-1.8.3.min.js"}
     %script{:type => "text/javascript", :src => "//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"}
     %script{:type => "text/javascript", :src => "http://code.highcharts.com/highcharts.js"}
-    %script{:type => "text/javascript", :src => "/application.js"}
+    %script{:type => "text/javascript", :src => "/application.js?1=1"}
     %script{:type => "text/javascript", :src => "https://raw.github.com/timrwood/moment/2.0.0/min/moment.min.js"}
   %body
     .container
