Nodback to ICHack2013

--- a/views/_footer.haml
+++ b/views/_footer.haml
@@ -1,9 +1,11 @@
 %footer.footer
   .container
     %p
-      Designed and Created by
+      Designed and Created for
+      %a{:href => "www.ichack.org"} ICHack 2013
+      by
       %a{:href => "http://www.inspiredpixel.net"} Peter Hamilton
-      &nbsp;
+
       %a{:href => "http://www.twitter.com/peterejhamilton"}
         %i.icon-twitter
       &nbsp;
