Added github auth and some more stats (participant related)

--- a/views/application.less
+++ b/views/application.less
@@ -42,3 +42,14 @@ body {
   border-top: 1px solid #E5E5E5;
   background-color: whiteSmoke;
 }
+
+.stat-box {
+  .title{
+    font-size: 20px;
+    margin-bottom: 5px;
+  }
+  .well {
+    font-size: 25px;
+    font-weight: bold;
+  }
+}
