--- a/views/repositories.haml
+++ b/views/repositories.haml
@@ -9,7 +9,11 @@
     .row
       .span12
         %h1= "Stats for #{@hackathon.name}"
-    .row
+    .row#github-api-error-message{:style => "display: none"}
+      .span12
+        .alert.alert-error
+          It appears we are having issues with the Github API (most likely a rate error). Please be patient!
+    #main-graph.row.github-api-stats
       .span12
         %input#stats-link{:type => "hidden", :value => "/hackathons/#{@hackathon.id}/stats.json"}
         #stats
@@ -22,16 +26,18 @@
           Tweets about "#ichack"
         :javascript
           !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
-      .span8
+      .span4.github-api-stats
         .row
           .span2.stat-box
             %span.title Total Participants
             .well
               #stat-total-participants
+                .loading
           .span2.stat-box
             .title Avg. Team Size
             .well
               #stat-average-team-size
+                .loading
     .row
       .span12
         %h1= "Repositories (#{@repositories.count})"
