Changed json URL

--- a/views/repositories.haml
+++ b/views/repositories.haml
@@ -19,7 +19,7 @@
           It appears we are having some issues. Please be patient!
     #main-graph.row.github-api-stats
       .span12
-        %input#stats-link{:type => "hidden", :value => "/hackathons/#{@hackathon.id}/stats.json"}
+        %input#stats-link{:type => "hidden", :value => "/hackathons/#{@hackathon.id}/data.json"}
         #stats
           .centered Loading Statistics...
           %br
