--- a/views/application.less
+++ b/views/application.less
@@ -57,3 +57,21 @@ body {
 #main-graph {
   margin-bottom: 15px;
 }
+
+#redbull-bar {
+  width: 100%;
+  margin-bottom: 10px;
+  img {
+    height: 30px;
+    margin-bottom: 5px;
+  }
+}
+
+#pizza-bar {
+  width: 100%;
+  margin-bottom: 10px;
+  img {
+    height: 20px;
+    margin-bottom: 5px;
+  }
+}
