Added more stat boxes - commits, top words

--- a/views/application.less
+++ b/views/application.less
@@ -54,6 +54,10 @@ body {
   }
 }
 
+#stat-common-words {
+    line-height: 35px;
+}
+
 #main-graph {
   margin-bottom: 15px;
 }
@@ -73,5 +77,15 @@ body {
   img {
     height: 20px;
     margin-bottom: 5px;
+  }
+}
+
+.commit-entry {
+  margin-bottom: 10px;
+
+  .detail {
+    font-size: 12px;
+    color: #999;
+    text-align: right;
   }
 }
