--- a/views/repositories.haml
+++ b/views/repositories.haml
@@ -64,6 +64,16 @@
                 .well
                   #stat-average-team-size
                     .loading
+              .span2.stat-box
+                .title Total Commits
+                .well
+                  #stat-total-commits
+                    .loading
+              .span2.stat-box
+                .title Hours
+                .well
+                  #stat-total-hours
+                    .loading
               .span4.stat-box
                 .title Most Common Words
                 .well
